--- a/src/App.sass
+++ b/src/App.sass
@@ -1,59 +1,92 @@
-$alive : green
-$dead : grey
+$background: #323c58
+$grid: $background
+$alive: #24a934
+$dead: #3c4662
+$born: #6fa92d
+$died: #39635e
+
+html, body, #root
+  height: 100%
+  min-height: 100%
+  font-family: 'Comfortaa', cursive;
 
 .App
   text-align: center
+  //background-color: $background
+  background: radial-gradient(ellipse at center bottom, $born 0%, $background 75%);
+  min-height: 100%
+
 
 .App-header
-  background-color: #222
+  //background-color: #222
   padding: 20px
   color: white
 
 .App-body
-  .control-panel, .options-panel
+
+  .panel-area
     padding: 2em
-    background-color: #dddddd
-  
-  .life-area table
-    margin: 1em auto
-    border-collapse: collapse
-    border-spacing: 0
+    //background-color: $background
+    color: white
 
-    td.square
-      width: 20px
-      position: relative
-      margin: 20em auto
 
-      label
-        width: 20px
-        height: 20px
+  .control-panel
+    
+    .generation
+      display: inline-block
+      vertical-align: middle
+      margin-left: 1em
+      width: 8em
+      text-align: left
+
+  .options-panel
+    display: flex
+    flex-direction: column
+    align-items: center
+
+    .central
+      display: flex
+      flex-direction: column
+      align-items: flex-start
+
+    .option:first-child
+      margin-bottom: 0.5em
+
+    .type
+      display: inline-block
+      vertical-align: middle
+      margin-right: 1em
+
+  .life-area
+    display: flex
+    justify-content: center
+
+    .grid
+      margin: 1em auto
+      display: flex
+      flex-direction: column
+      justify-content: center
+      background-color: $grid
+      padding: 1px 0 0 1px
+
+      .line
+        display: flex
+        flex-direction: row
+        justify-content: center
+
+      .cell
+        width: 8px
+        height: 8px
+        position: relative
+        margin: 0 1px 1px 0
+        background-color: $dead
         cursor: pointer
-        position: absolute
-        top: 0
-        left: 0
-        background: $dead
-        border-radius: 0
-        //box-shadow: inset 0px 1px 1px rgba(0,0,0,0.5), 0px 1px 0px rgba(255,255,255,.4)
 
-        &:after
-          content: ''
-          width: 20px
-          height: 20px
-          position: absolute
-          top: 0
-          left: 0
-          //border: 3px solid #fcfff4
-          //border-top: none
-          //border-right: none
-          background: $alive
-          opacity: 0
-          //transform: rotate(-45deg)
+        &.alive
+          background-color: $alive
 
-        &:hover::after
-          opacity: 0.3
+        &.born
+          background-color: $born
 
-      input[type=checkbox]
-        visibility: hidden
-
-        &:checked + label:after
-          opacity: 1
+        &.died
+          background-color: $died
