--- a/src/App.sass
+++ b/src/App.sass
@@ -8,17 +8,15 @@ $died: #39635e
 html, body, #root
   height: 100%
   min-height: 100%
-  font-family: 'Comfortaa', cursive;
+  font-family: 'Comfortaa', cursive
 
 .App
   text-align: center
-  //background-color: $background
-  background: radial-gradient(ellipse at center bottom, $born 0%, $background 75%);
+  background: radial-gradient(ellipse at center bottom, $born 0%, $background 75%)
   min-height: 100%
 
 
 .App-header
-  //background-color: #222
   padding: 20px
   color: white
 
@@ -26,7 +24,6 @@ html, body, #root
 
   .panel-area
     padding: 2em
-    //background-color: $background
     color: white
 
 
