README file completed

--- a/src/App.sass
+++ b/src/App.sass
@@ -1,5 +1,6 @@
 $background: #323c58
 $grid: $background
+$popColor: #fecc00
 $alive: #24a934
 $dead: #3c4662
 $born: #6fa92d
@@ -19,6 +20,11 @@ html, body, #root
 .App-header
   padding: 20px
   color: white
+
+  h1
+    color: $popColor
+    font-size: 3.5em
+    font-weight: bold
 
 .App-body
 
