--- a/src/App.sass
+++ b/src/App.sass
@@ -59,6 +59,10 @@ html, body, #root
       display: inline-block
       vertical-align: middle
       margin-right: 1em
+      
+    .dropup
+      display: inline-block
+      margin-left: 1em
 
   .life-area
     display: flex
