--- a/src/App.sass
+++ b/src/App.sass
@@ -84,8 +84,6 @@ h1
     font-weight: bold
     text-align: center
 
-    &:first-child
-
   .dropup
     display: inline-block
     margin-left: 1em
@@ -133,7 +131,7 @@ h1
     background-color: transparent
     color: white
     border-radius: 4px 0 0 4px
-    width: 12em;
+    width: 12em
 
     &:focus
       border-color: $popColor
